--- a/package.json
+++ b/package.json
@@ -11,11 +11,20 @@
   },
   "dependencies": {
     "@nuxt/fonts": "^0.7.1",
-    "nuxt": "^3.12.2"
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "lucide-vue-next": "^0.397.0",
+    "nuxt": "^3.12.2",
+    "radix-vue": "^1.8.5",
+    "shadcn-nuxt": "^0.10.4",
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@nuxtjs/tailwindcss": "^6.12.0",
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.38",
-    "tailwindcss": "^3.4.4"
+    "tailwindcss": "^3.4.4",
+    "typescript": "^5.5.2"
   }
 }
