--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
   "dependencies": {
     "@nuxt/fonts": "^0.7.1",
     "@nuxt/icon": "^1.0.0",
+    "@tanstack/vue-query": "^5.51.1",
     "@vueuse/core": "^10.11.0",
+    "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-vue-next": "^0.397.0",
     "nuxt": "^3.12.2",
+    "pinia": "^2.1.7",
     "radix-vue": "^1.8.5",
     "shadcn-nuxt": "^0.10.4",
     "tailwind-merge": "^2.3.0",
